Correction after merge